<resources>
    <string name="app_name">My Beer, My Cash</string>
    <string name="title_cesta_activity">Cestas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="order_id_mock" translatable="false">Março</string>
    <string name="price_mock" translatable="false">2018</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="litros" translatable="false">LITROS</string>
    <string name="loja" translatable="false">LOJA</string>
    <string name="preco" translatable="false">PREÇO UN.</string>
    <string name="preco_litro" translatable="false">PREÇO/LITRO</string>
    <string name="cancel" translatable="false">CANCELAR</string>
    <string name="ver_produtos" translatable="false">PRODUTOS DA CESTA</string>
    <string name="salvar" translatable="false">SALVAR</string>
    <string name="descricao_cesta" translatable="false">DESCRIÇÃO DA CESTA</string>
    <string name="valor_total" translatable="false">VALOR TOTAL</string>
    <string name="quantidade" translatable="false">QTDE</string>
    <string name="title_cadastro_produto" translatable="false">Cadastro de Produto</string>
    <string name="sender_badge" translatable="false">FUNCIONÁRIO</string>
    <string name="client_name_mock" translatable="false">Marcos Sobral</string>
    <string name="rating_mock" translatable="false">UDS</string>
    <string name="from_badge" translatable="false">HORAS TRABALHADAS</string>
    <string name="to_badge" translatable="false">HORAS DEVIDAS</string>
    <string name="delivery_date_badge" translatable="false">SALDO</string>
    <string name="delivery_time_mock" translatable="false">4:37:51</string>
    <string name="delivery_date_mock" translatable="false"></string>
    <string name="deadline_badge" translatable="false"></string>
    <string name="deadline_time_mock" translatable="false"></string>
    <string name="request_btn_text" translatable="false">CONSULTAR</string>
    <string name="content_from1_mock">88:37:51</string>
    <string name="content_from2_mock"></string>
    <string name="content_to1_mock">84:00:00</string>
    <string name="content_to2_mock"></string>
    <string name="title_activity_cadastro_cesta">Produtos da Cesta</string>
    <string name="title_activity_produtos">Produtos</string>
    <string name="add_produto_cesta">Adicionando Produto</string>
    <string name="title_activity_cestas">Cestas</string>
    <string name="title_activity_cadastro_produto">Cadastro de Produto</string>
    <string name="total_da_cesta">Total da cesta</string>
    <string name="comparacao">Até o momento a cerveja mais em conta  nesta cesta é a skol 269, do estabelecimento  Gbarbosa Costa Azul, o valor do ml esta á  R$ 0,0069, aproveite!</string>
    <string name="dataAtual">Última atualização</string>

</resources>
